--- a/render.yaml
+++ b/render.yaml
@@ -5,13 +5,12 @@ services:
     runtime: python
     region: frankfurt
     plan: free
-    buildCommand: cd backend && pip install -r requirements.txt
-    startCommand: cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    rootDir: backend
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: "3.11"
-      - key: DATABASE_URL
-        value: sqlite:///./iqraa_exam.db
 
   # Frontend (SvelteKit)
   - type: web
@@ -19,8 +18,9 @@ services:
     runtime: node
     region: frankfurt
     plan: free
-    buildCommand: cd frontend && npm install && npm run build
-    startCommand: cd frontend && node build
+    rootDir: frontend
+    buildCommand: npm install && npm run build
+    startCommand: node build
     envVars:
       - key: NODE_VERSION
         value: "20"
